--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/openzeppelin-upgrades"]
 	path = lib/openzeppelin-upgrades
 	url = https://github.com/OpenZeppelin/openzeppelin-upgrades
+[submodule "duUSD/lib/openzeppelin-contracts"]
+	path = duUSD/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
